fix(auth-abort): fixed tests

--- a/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/operation/BUILD
+++ b/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/operation/BUILD
@@ -29,6 +29,7 @@ junit_test(
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/collection",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/core",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/registry",
+        "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/types/histograms",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/types/timers",
         "@tink_backend//src/libraries/unleash",
     ],
