feat(baltics/luminor): added IdentityFetching
Added identity fetching for luminor agent

--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/lv/openbanking/luminor/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/lv/openbanking/luminor/BUILD
@@ -4,15 +4,16 @@ junit_test(
     name = "luminor",
     srcs = glob(["**/*.java"]),
     data = [
+        "//:agent_test_data",
         "//data:aggregation_test",
         "//data:provider_configurations",
         "//etc:development",
-        "//:agent_test_data"
     ],
     visibility = ["//visibility:public"],
     deps = [
-      "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/lv/openbanking/luminor",
+        "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/lv/openbanking/luminor",
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
+        "//src/integration/credentials/src/main/java/se/tink/libraries/credentials/service",
         "//src/integration/lib",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/configuration",
