chore(alerts): switch team for FR and PT

--- a/.charts/tink-backend-aggregation-agents/templates/payments/pt/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/payments/pt/alerts.yaml
@@ -17,7 +17,7 @@ spec:
       labels:
         severity: urgent
         priority: P3
-        who: payments-connectivity
+        who: payments-minions
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
