--- a/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
@@ -161,7 +161,7 @@ spec:
     - alert: RefreshUnknownErrorRateOver10%PT
       expr: |
         # Failed refreshes (due to unknown RuntimeException) over 10%
-        (count(sum_over_time(tink_agent_refresh_total{label="refresh", outcome="failed", market="PT", provider_type!="test"}[1h])) by (className,provider,type)
+        (count(sum_over_time(tink_agent_refresh_total{label="refresh", outcome="failed", market="PT", provider_type!="test"}[1h])) by (className,provider,type))
             / count(sum_over_time(tink_agent_refresh_total{market="PT", provider_type!="test"}[1h])) by (className,provider,type) > 0.1
       for: 15m
       labels:
