test(as): Changed usage of feature flag for operation aborting

--- a/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/worker/BUILD
+++ b/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/worker/BUILD
@@ -56,6 +56,7 @@ java_library(
         "//third_party:org_apache_curator_curator_recipes",
         "//third_party:org_assertj_assertj_core",
         "//third_party:org_slf4j_slf4j_api",
+        "@maven//:no_finn_unleash_unleash_client_java",
         "@tink_backend//src/aggregation-controller/api/src/main/java/se/tink/backend/aggregationcontroller/v1/rpc/enums",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/core",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/registry",
