feat(valuegen): add support for uuidv1
[ITE-2640]

--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders/BUILD
@@ -20,6 +20,7 @@ java_library(
         "//third_party:com_google_inject_guice",
         "//third_party:commons_codec_commons_codec",
         "//third_party:lombok_libs",
+        "@aggregation//:com_fasterxml_uuid_java_uuid_generator",
         "@tink_backend//src/libraries/unleash",
         "@tink_backend//src/libraries/uuid",
     ],
