refactor(transferAgentWorkerCommand): refactor error handling

--- a/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/commands/BUILD
+++ b/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/commands/BUILD
@@ -29,6 +29,7 @@ junit_test(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions/agent",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions/bankservice",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions/transfer",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/progressive",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/api",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/compliance/account_classification/psd2_payment_account",
