--- a/.charts/tink-backend-aggregation-java11/values/aggregation-staging.yaml
+++ b/.charts/tink-backend-aggregation-java11/values/aggregation-staging.yaml
@@ -4,7 +4,7 @@ initialDelaySeconds: "300"
 cacheHosts: main.wazhro.0001.euw1.cache.amazonaws.com:11211
 
 sqsQueueConfiguration:
-  enabled: True
+  enabled: False
   url: "https://sqs.eu-west-1.amazonaws.com/790041524432/aggregation-refresh-queue-aggregation-staging"
   region: "eu-west-1"
   name: "aggregation-refresh-queue-aggregation-staging"
