feat(pl/agents): add support for polish translations
[ITE-2640]

--- a/po/BUILD
+++ b/po/BUILD
@@ -50,6 +50,11 @@ i18n_java_source(
     lang = "es",
 )
 
+i18n_java_source(
+    name = "i18n_pl",
+    lang = "pl",
+)
+
 java_library(
     name = "i18n",
     srcs = [
@@ -61,6 +66,7 @@ java_library(
         "//po:i18n_it",
         "//po:i18n_nl",
         "//po:i18n_no",
+        "//po:i18n_pl",
         "//po:i18n_pt",
         "//po:i18n_sv",
     ],
