fix(es/targo): fix xml deserialization issue

--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/fr/banks/creditmutuel/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/fr/banks/creditmutuel/BUILD
@@ -17,6 +17,7 @@ java_library(
         "//src/libraries/agent-storage",
         "//src/libraries/serialization",
         "//src/libraries/strings",
+        "//third_party:com_google_inject_guice",
         "//third_party:org_assertj_assertj_core",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
