--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/fr/banks/banquetransatlantique/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/fr/banks/banquetransatlantique/BUILD
@@ -12,5 +12,6 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/signaturekeypair",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/client",
         "//src/libraries/agent-storage",
+        "//third_party:com_google_inject_guice",
     ],
 )
