--- a/.charts/tink-backend-aggregation-agents/templates/nl/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/nl/alerts.yaml
@@ -273,3 +273,22 @@ spec:
       summary: Agent <{ $labels.className }> has failed over 20%
         of its login attempts the past 60 minutes.
       tags: {{ .Values.tags }}
+
+    ### Auth error
+  - alert: AuthErrorNL
+    expr: |
+      # Auth error above 90%
+      (sum(increase(tink_agent_login_total{action=~"login|is-logged-in", outcome=~"cancelled|cancelled_due_to_third_party_app_timeout|failed|failed_due_to_tink_infrastructure_failure|unavailable", market="NL", provider_type!="test"}[30m])) by (action,className,provider)
+                / sum(increase(tink_agent_login_total{action=~"login|is-logged-in", market="NL", provider_type!="test"}[30m])) by (action,className,provider) >0.90)
+       and sum(increase(tink_agent_login_total{market="NL", provider_type!="test"}[30m])) by (action,className,provider) > 10
+    for: 5m
+    labels:
+      severity: urgent
+      priority: P1
+      who: integration-thundercats
+    annotations:
+      description: {{ .Values.kibanaLink }}
+        {{ .Values.grafanaLink }}
+      summary: Auth error rate is above 90% ( <{ $value }> ) for <{ $labels.className }> ( <{ $labels.provider }> )
+        the last 30 minutes.
+      tags: {{ .Values.tags }}
