--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/lt/openbanking/citadele/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/lt/openbanking/citadele/BUILD
@@ -11,5 +11,6 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/eidassigner/module",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders",
         "//third_party:com_google_inject_guice",
+        "@aggregation//:com_google_guava_guava",
     ],
 )
