--- a/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/consent/generators/uk/starling/BUILD
+++ b/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/consent/generators/uk/starling/BUILD
@@ -1,12 +1,13 @@
 load("//tools/bzl:junit.bzl", "junit_test")
 
 junit_test(
-    name = "consent",
-    srcs = glob(["**/*.java"]),
+    name = "starling",
+    srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
         "//src/integration/credentials/src/main/java/se/tink/libraries/credentials/service",
-        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/consent",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/consent/generators/uk/starling",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders",
         "//third_party:org_assertj_assertj_core",
         "//third_party:org_mockito_mockito_core",
         "@aggregation//:com_google_guava_guava",
