feat(java11): set hpa for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/aggregation-hpa.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/aggregation-hpa.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: aggregation-service-hpa
+  name: aggregation-service-java11-hpa
   namespace: aggregation
 spec:
   minReplicas:  {{ default "2" .Values.replicas }}
