feat(java11): set config for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/aggregation-config.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/aggregation-config.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: aggregation-config
+  name: aggregation-config-java11
   namespace: aggregation
 data:
   config.yml: |
